--- a/modules/digitopia-cms/views/admin/dashboard.pug
+++ b/modules/digitopia-cms/views/admin/dashboard.pug
@@ -1,6 +1,6 @@
-extends ../../../../views/wrapper
+extends wrapper
 
-block content
+block amdincontent
 	.admin-container
 		.admin.clear-fix.mdc-elevation--z1
 			.page-header
