--- a/modules/digitopia-cms/views/admin/type-markdown.pug
+++ b/modules/digitopia-cms/views/admin/type-markdown.pug
@@ -1,5 +1,5 @@
-.form-group.markdown-editor(data-sargasso-class="markdownEditor" data-target=".current-editor" data-content=".target")
-	textarea.target(style="display:none" name= name data-validate= options.validate)= value
+.input-group.markdown-editor(data-sargasso-class="markdownEditor" data-target=".current-editor" data-content=".target")
+	textarea.target(style="display:none" name= name data-validate= options.validate data-payload)= value
 	.current-editor
 	.view-mode.pull-right
 		label Markdown <input type=radio name=inputformat value=markdown>
