--- a/modules/digitopia-cms/views/password-reset.pug
+++ b/modules/digitopia-cms/views/password-reset.pug
@@ -4,20 +4,20 @@ block content
 	.reg-form-container.centered
 		h2 <i class="material-icons">lock</i>  Reset Password Request
 				
-		form.form.form-validation(action="/api/users/password-reset" method="PATCH" data-sargasso-class="formValidator,formController" data-submitter="#submitter" data-stay-on-page="true" data-recaptcha= publicOptions.RECAPTCHA_PUBLIC)
-			input(type="hidden" name="_csrf" value= csrfToken)
+		form.form.form-validation(action="/api/users/password-reset" method="PATCH" data-sargasso-class="MolaMola" data-helpers="BoilerplateHandler" data-submitter="#submitter" data-stay-on-page="true" data-recaptcha= publicOptions.RECAPTCHA_PUBLIC)
+			input(type="hidden" name="_csrf" value= csrfToken data-payload)
 
 			.reg-form.clear-fix.mdc-elevation--z1
-				section.form-group
+				section.input-group
 					.mdc-text-field.mdc-text-field--with-trailing-icon
-						input.mdc-text-field__input(name="email" data-validate= validators.email)
+						input.mdc-text-field__input(name="email" data-validate= validators.email data-payload)
 						label.mdc-floating-label Email Address
 						.input-ok-indicator.material-icons.mdc-text-field__icon check_circle
 						.mdc-line-ripple
 					.mdc-text-field-helper-line
 						.validation-help.mdc-text-field-helper-text--persistent
 			
-				section.form-group.pull-right.button-bar
+				section.input-group.pull-right.button-bar
 					a.mdc-button(href="/users/login") Cancel
 					button#submitter.mdc-button.mdc-button--raised(disabled) Save
 					
