--- a/modules/digitopia-cms/views/photo.pug
+++ b/modules/digitopia-cms/views/photo.pug
@@ -13,7 +13,7 @@ block content
 					table
 						tr
 							td!= uploadFormElement
-					section.form-group.pull-right.button-bar
+					section.input-group.pull-right.button-bar
 						a.mdc-button(href="/users/settings") Cancel
 						button#submitter.mdc-button.mdc-button--raised(disabled).primary-button
 							span.mdc-button__label Save
