--- a/modules/digitopia-cms/views/admin/type-checkbox.pug
+++ b/modules/digitopia-cms/views/admin/type-checkbox.pug
@@ -1,14 +1,14 @@
-.form-group
+.input-group
 	if value
 		.mdc-switch.mdc-switch--checked
 			.mdc-switch__track
 			.mdc-switch__thumb-underlay
 				.mdc-switch__thumb
-					input.mdc-switch__native-control(type="checkbox" name= name checked)
+					input.mdc-switch__native-control(type="checkbox" name= name checked data-payload)
 	else
 		
 		.mdc-switch
 			.mdc-switch__track
 			.mdc-switch__thumb-underlay
 				.mdc-switch__thumb
-					input.mdc-switch__native-control(type="checkbox" name= name)
+					input.mdc-switch__native-control(type="checkbox" name= name data-payload)
