--- a/modules/digitopia-cms/views/admin/type-image.pug
+++ b/modules/digitopia-cms/views/admin/type-image.pug
@@ -1,4 +1,4 @@
-.form-group
+.input-group
 	.uploadable-preview(data-name=columnName + '-preview')
 		if thumb
 			!= thumb
@@ -7,10 +7,10 @@
 			if metadata && metadata.type
 				| type: <strong>#{metadata.type}</strong> w: <strong>#{metadata.width}</strong> h: <strong>#{metadata.height}</strong>
 			
-		input(type="hidden" data-name= columnName name= name value= value)
-		input(type="hidden" data-name= columnName + '-upload' name= uploadName)
-		input(type="hidden" data-name= columnName + '-width' name= widthName)
-		input(type="hidden" data-name= columnName + '-height' name= heightName)
+		input(type="hidden" data-name= columnName name= name value= value data-payload)
+		input(type="hidden" data-name= columnName + '-upload' name= uploadName data-payload)
+		input(type="hidden" data-name= columnName + '-width' name= widthName data-payload)
+		input(type="hidden" data-name= columnName + '-height' name= heightName data-payload)
 		label.file-upload-label(for= columnName)
 			i.material-icons cloud_upload
 			!= '&nbsp;&nbsp;Choose file to upload'
