--- a/modules/digitopia-cms/views/email-change.pug
+++ b/modules/digitopia-cms/views/email-change.pug
@@ -6,26 +6,26 @@ block content
 			i.material-icons mail_outline
 			|  Change Email Address
 		
-		form.form.form-validation(action="/api/users/email-change" method="PATCH" data-sargasso-class="formValidator,formController" data-submitter="#submitter")
-			input(type="hidden" name="_csrf" value= csrfToken)
+		form.form.form-validation(action="/api/users/email-change" method="PATCH" data-sargasso-class="MolaMola" data-helpers="BoilerplateHandler" data-submitter="#submitter")
+			input(type="hidden" name="_csrf" value= csrfToken data-payload)
 			.reg-form.clear-fix.mdc-elevation--z1
-				section.form-group
+				section.input-group
 					.mdc-text-field.mdc-text-field--with-trailing-icon
-						input.mdc-text-field__input(name="email" data-validate= validators.email data-unique-endpoint="/api/users/is-unique-email")
+						input.mdc-text-field__input(name="email" data-validate= validators.email data-unique-endpoint="/api/users/is-unique-email" data-payload)
 						label.mdc-floating-label New Email Address
 						.input-ok-indicator.material-icons.mdc-text-field__icon check_circle
 						.mdc-line-ripple
 					.mdc-text-field-helper-line
 						.validation-help.mdc-text-field-helper-text--persistent
-				section.form-group
+				section.input-group
 					.mdc-text-field.mdc-text-field--with-trailing-icon
-						input.mdc-text-field__input(name="confirm-email" data-validate= validators.email data-match="input[name='email']")
+						input.mdc-text-field__input(name="confirm-email" data-validate= validators.email data-match="input[name='email']" data-payload)
 						label.mdc-floating-label Confirm New Email Address
 						.input-ok-indicator.material-icons.mdc-text-field__icon check_circle
 						.mdc-line-ripple
 					.mdc-text-field-helper-line
 						.validation-help.mdc-text-field-helper-text--persistent
-				section.form-group.pull-right.button-bar
+				section.input-group.pull-right.button-bar
 					a.mdc-button(href="/users/settings") Cancel
 					button#submitter.mdc-button.mdc-button--raised(disabled) Save
 			
