--- a/modules/digitopia-cms/views/password-set.pug
+++ b/modules/digitopia-cms/views/password-set.pug
@@ -8,31 +8,31 @@ block content
 			.alert.alert-error= error
 		else
 			
-			form.form.form-validation(action="/api/users/password-set" method="PATCH" data-sargasso-class="formValidator,formController" data-submitter="#submitter" data-redirect="/users/login")
-				input(type="hidden" name="_csrf" value= csrfToken)
+			form.form.form-validation(action="/api/users/password-set" method="PATCH" data-sargasso-class="MolaMola" data-helpers="BoilerplateHandler" data-submitter="#submitter" data-redirect="/users/login")
+				input(type="hidden" name="_csrf" value= csrfToken data-payload)
 
 				.reg-form.clear-fix.mdc-elevation--z1
-					input(type="hidden" name="token" value= token)
+					input(type="hidden" name="token" value= token data-payload)
 						
-					section.form-group
+					section.input-group
 						.mdc-text-field.mdc-text-field--with-trailing-icon
-							input.mdc-text-field__input(type="password" name="password" data-validate= {isPassword:true} data-min-length="8")
+							input.mdc-text-field__input(autocomplete="new-password" type="password" name="password" data-validate= {isPassword:true} data-min-length="8" data-payload)
 							label.mdc-floating-label New Password
 							.input-ok-indicator.material-icons.mdc-text-field__icon check_circle
 							.mdc-line-ripple
 						.mdc-text-field-helper-line
 							.validation-help.mdc-text-field-helper-text--persistent
 							
-					section.form-group
+					section.input-group
 						.mdc-text-field.mdc-text-field--with-trailing-icon
-							input.mdc-text-field__input(type="password" name="confirm-password" data-validate= {isPassword:true} data-match="input[name='password']" placeholder="confirm password")
+							input.mdc-text-field__input(autocomplete="new-password" type="password" name="confirm-password" data-validate= {isPassword:true} data-match="input[name='password']" placeholder="confirm password" data-payload)
 							label.mdc-floating-label Confirm New Password
 							.input-ok-indicator.material-icons.mdc-text-field__icon check_circle
 							.mdc-line-ripple
 						.mdc-text-field-helper-line
 							.validation-help.mdc-text-field-helper-text--persistent
 						
-					section.form-group.pull-right.button-bar
+					section.input-group.pull-right.button-bar
 						a.mdc-button(href="/users/login") Cancel
 						button#submitter.mdc-button.mdc-button--raised(disabled) Save New Password
 						
