--- a/views/wrapper.pug
+++ b/views/wrapper.pug
@@ -15,17 +15,12 @@ html
 
 		link(rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" type="image/png")
 
-		link(rel="manifest" href="/manifest.json")
+		if publicOptions.MANIFEST
+			link(rel="manifest" href= publicOptions.MANIFEST)
 		
 		title= pageTitle ? pageTitle : sitename
 		
 		block seo
-		
-		//
-			link(href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet")
-			link(href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" rel="stylesheet")
-			link(href="https://fonts.googleapis.com/css2?family=Material+Icons+Round" rel="stylesheet")
-			link(href="https://fonts.googleapis.com/css2?family=Material+Icons+Sharp" rel="stylesheet")
 		
 		if env === 'production'
 			link(rel='stylesheet', href='/dist/css/marlinapp.min.css')
